# webcloner

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/routes/: clone.py  dom_extraction.py  health.py  screenshot.py
backend/app/core/: exceptions.py
backend/app/models/: components.py  dom_extraction.py  requests.py  responses.py  screenshot.py
backend/app/services/: asset_downloader_service.py  browser_manager.py  browser_service.py  cloud_browser.py  component_detector.py  dom_extraction_service.py  html_rewriter_service.py  image_resizer_service.py  llm_service.py  screenshot_service.py
backend/app/services/extraction/: analyzer.py  extractors.py  storage.py
backend/app/utils/: browser.py  logger.py
backend/data/extractions/: integration-test_extraction_1749462167.json
backend/examples/: cloud_browser_example.py  screenshot_example.py
backend/tests/: test_api_endpoints.py  test_browser_service.py  test_cloud_browser.py  test_cloud_browser_integration.py  test_component_detector.py  test_configuration.py  test_dom_extraction_routes.py  test_dom_extraction_service.py  test_llm_service.py  test_screenshot_routes.py  test_screenshot_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/features/: CloneInterface.tsx
frontend/src/components/features/Preview/: CodeViewer.tsx  (+2 more)
frontend/src/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Loading.tsx  ProgressBar.tsx  button.tsx  loading.tsx  progressBar.tsx
frontend/src/hooks/: useCloning.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: constants.ts  helpers.ts  validation.ts
(+5 files in other folders)
