[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "1.0.0"
description = "AI-powered website cloning backend service"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "playwright==1.40.0",
    "playwright-stealth==1.0.6",
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "aiofiles==23.2.1",
    "Pillow==10.1.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "python-dateutil==2.8.2",
    "validators==0.22.0",
    "structlog==23.2.0",
    "psutil==5.9.8",
]
requires-python = ">=3.8, <3.12"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]

# Tell hatchling where your Python package is
[tool.hatch.build.targets.wheel]
packages = ["app"]

# Minimal pytest config (only what's needed)
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests",
    "slow: slow-running tests",
    "unit: Unit tests (fast, no external dependencies)",
    "browser: Tests that require browser automation",
    "network: Tests that require network access",
]
asyncio_mode = "auto"